<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@mipmap/bg_program"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@mipmap/head">

        <Button
            android:id="@+id/ib_back"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/back"
            android:textSize="12sp"
            android:textColor="@color/textBg"
            android:background="@mipmap/ib_icon_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/iv_status"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_blue"/>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textBg"
                android:text="@string/connected"/>

        </LinearLayout>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_top_contro"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/btn_bg"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/ib_beat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ib_icon_rhythm"/>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:textColor="#31F4F3"
                            android:textSize="12sp"
                            android:text="@string/rhythm"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_light"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:layout_marginLeft="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/btn_bg"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/ib_light"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/bt_icon_lighting"/>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/lighting"
                            android:textColor="#31F4F3"
                            android:textSize="12sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:layout_marginLeft="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@drawable/btn_bg"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/ib_speed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/ib_icon_speed"/>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/speed"
                            android:textColor="#31F4F3"
                            android:textSize="12sp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/btn_bg"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/ib_add_actions"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@mipmap/ib_icon_action"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/addactions"
                            android:textColor="#31F4F3"
                            android:textSize="12sp"
                            android:layout_marginLeft="29dp"/>

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_presentation"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_bg"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/ib_presentation"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@mipmap/ib_icon_start"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/presentation"
                            android:layout_marginStart="8dp"
                            android:textSize="12sp"
                            android:textColor="#31F4F3"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_play"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_bg"
                        android:layout_marginStart="12dp"
                        android:gravity="center">

                        <ImageButton
                            android:id="@+id/ib_play"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@mipmap/ib_icon_start"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/play"
                            android:textSize="12sp"
                            android:textColor="#31F4F3"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="240dp">

                        <ImageView
                            android:id="@+id/iv_music_album"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@mipmap/bg_music"/>

                        <ImageView
                            android:id="@+id/iv_needle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@mipmap/ib_icon_cd"
                            android:layout_marginTop="10dp"/>

                        <TextView
                            android:id="@+id/tv_add_music"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:layout_centerInParent="true"
                            android:textColor="#ffffffff"
                            android:textSize="12sp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/addmusic"/>

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tv_music_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:textColor="#ffffffff"
                        android:textSize="12sp"/>

                </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/btn_bg"
                android:drawableLeft="@mipmap/icon_text_save"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="#ffffffff"
                android:textSize="12sp"
                android:text="@string/save"/>

            <TextView
                android:id="@+id/tv_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:drawableLeft="@mipmap/icon_text_save"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginTop="11dp"
                android:textColor="#ffffffff"
                android:textSize="12sp"
                android:text="@string/list"/>

    </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="200dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_actions_list"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_music_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#31F4F3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="5dp"/>

    </RelativeLayout>

</LinearLayout>