<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/bg_remote"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@mipmap/head">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:background="@mipmap/ib_icon_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/iv_status"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@mipmap/ic_blue"/>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textBg"
                android:text="@string/connected"/>

        </LinearLayout>

    </RelativeLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/ll_back"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="50dp"-->
        <!--android:clickable="true"-->
        <!--android:focusable="true"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageButton-->
            <!--android:id="@+id/ib_back"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:background="@mipmap/ib_icon_back" />-->

    <!--</LinearLayout>-->

    <!--<TextView-->
        <!--android:id="@+id/tv_connecd"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_gravity="right"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="15dp"-->
        <!--android:background="@mipmap/icon_blu_bg"-->
        <!--android:drawableLeft="@mipmap/icon_blu"-->
        <!--android:gravity="center"-->
        <!--android:paddingLeft="10dp"-->
        <!--android:text="@string/connected"-->
        <!--android:textColor="#ffffffff"-->
        <!--android:textSize="17sp"-->
        <!--app:layout_constraintEnd_toEndOf="@+id/linearLayout"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/pan"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="20dp"
        android:src="@mipmap/circle"
        android:longClickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <RelativeLayout
        android:id="@+id/rl_left"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:longClickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/pan"
        app:layout_constraintStart_toStartOf="@+id/pan"
        app:layout_constraintTop_toTopOf="@+id/pan">

        <ImageButton
            android:id="@+id/ib_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/btn_left"
            android:scaleType="center"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_up"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:longClickable="true"
        app:layout_constraintEnd_toEndOf="@+id/pan"
        app:layout_constraintStart_toStartOf="@+id/pan"
        app:layout_constraintTop_toTopOf="@+id/pan">

        <ImageButton
            android:id="@+id/ib_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@mipmap/btn_up"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_right"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:longClickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/pan"
        app:layout_constraintEnd_toEndOf="@+id/pan"
        app:layout_constraintTop_toTopOf="@+id/pan">

        <ImageButton
            android:id="@+id/ib_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@mipmap/btn_right"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_down"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:longClickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/pan"
        app:layout_constraintEnd_toEndOf="@+id/pan"
        app:layout_constraintStart_toStartOf="@+id/pan">

        <ImageButton
            android:id="@+id/ib_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/btn_down"
            android:layout_centerInParent="true"/>

    </RelativeLayout>



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="228dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pan"
        app:layout_constraintTop_toTopOf="@+id/pan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_hand"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_bg"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <ImageView
                        android:id="@+id/ib_hand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/btn_hand_action" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/handaction"
                    android:textColor="#31F4F3" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_leg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_bg"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ib_leg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/btn_leg_action" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/legaction"
                    android:textColor="#31F4F3" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_combined"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_bg">

                    <ImageView
                        android:id="@+id/ib_combined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/btn_combined_action" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/combinedaction"
                    android:textColor="#31F4F3" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_lighting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:src="@mipmap/bt_icon_lighting" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/lighting"
                android:textColor="#ffffffff"
                android:textSize="17sp" />

            <ImageButton
                android:id="@+id/ib_light_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/select_light_bg"
                android:src="@mipmap/ic_light_white"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <ImageButton
                android:id="@+id/ib_light_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/select_light_bg"
                android:src="@mipmap/ic_light_bule2" />

            <ImageButton
                android:id="@+id/ib_light_darkblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/select_light_bg"
                android:src="@mipmap/ic_light_blue" />

            <ImageButton
                android:id="@+id/ib_light_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/select_light_bg"
                android:src="@mipmap/ic_light_green" />

            <ImageButton
                android:id="@+id/ib_light_yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/select_light_bg"
                android:src="@mipmap/ic_light_yellow" />

            <ImageButton
                android:id="@+id/ib_light_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/select_light_bg"
                android:src="@mipmap/ic_light_red" />

            <ImageButton
                android:id="@+id/ib_light_purple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/select_light_bg"
                android:src="@mipmap/ic_light_purple" />

            <Switch
                android:id="@+id/sw_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:track="@mipmap/bg_switch"
                android:thumb="@mipmap/ic_thumb"
                android:layout_marginStart="8dp"
                android:textOn=""
                android:textOff=""
                android:checked="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:src="@mipmap/ib_icon_speed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/speed"
                android:textColor="#ffffffff"
                android:textSize="17sp" />

            <cn.app.robert.view.CustomSeekbar
                android:id="@+id/sc_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                android:max="3"
                android:progress="3"
                android:progressDrawable="@drawable/seek"
                android:thumb="@mipmap/ic_seek_instrucrt"
                custom:numType="bottom"
                custom:numbackground="@mipmap/ic_seek_ind" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
